feat(styles): add support for a compat theme  (#9235)
* feat(themes): add support for a compat theme

* feat(styles): add support for a compat theme

* refactor(styles): add support for compat theme

* chore(themes): update builder to ensure filepath

* chore(themes): ignore compat directory

* chore(cli): update cli to ignore compat dirs

* fix(styles): add support for compat in stylesheets

* test: update test for custom properties

--- a/packages/carbon-react/.storybook/Welcome/welcome.scss
+++ b/packages/carbon-react/.storybook/Welcome/welcome.scss
@@ -1,5 +1,4 @@
-// @import '~carbon-components/scss/globals/scss/typography';
-@use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/theme';
 @use '@carbon/styles/scss/type';
 
 .container-welcome {
@@ -19,7 +18,7 @@
 .welcome__heading {
   @include type.type-style('productive-heading-07');
 
-  color: $text-inverse;
+  color: theme.$text-inverse;
 }
 
 .welcome__heading--subtitle {
