--- a/packages/themes/scss/modules/_config.scss
+++ b/packages/themes/scss/modules/_config.scss
@@ -6,3 +6,6 @@
 //
 
 $prefix: 'cds' !default;
+
+/// Specify if a fallback value should be provided for the CSS Custom Property
+$use-fallback-value: true !default;
