--- a/packages/styles/scss/compat/_theme.scss
+++ b/packages/styles/scss/compat/_theme.scss
@@ -5,4 +5,5 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward 'generated/themes';
+@forward '../theme';
+@forward '@carbon/themes/scss/compat/tokens';
