--- a/packages/styles/scss/compat/_themes.scss
+++ b/packages/styles/scss/compat/_themes.scss
@@ -5,4 +5,4 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward 'generated/themes';
+@forward '@carbon/themes/scss/compat/themes' show $white, $g10, $g90, $g100;
