--- a/packages/styles/scss/components/search/_search.scss
+++ b/packages/styles/scss/components/search/_search.scss
@@ -9,7 +9,7 @@
 // Search
 //-----------------------------
 
-@use '../../theme' as *;
+@use '../../compat/theme' as *;
 @use '../../config' as *;
 @use '../../type';
 @use '../../motion' as *;
