feat(ProgressBar): add to @carbon/styles (#9148)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -42,6 +42,7 @@
 @use 'pagination';
 @use 'pagination-nav';
 @use 'select';
+@use 'progress-bar';
 @use 'progress-indicator';
 @use 'tabs';
 @use 'ui-shell';
