fix(loading): remove progress bar on inactive state (#9209)
* fix(Loading): use consistent radius

* fix(loading): create progress percentage function

* fix(loading): remove progress bar on inactive state

* refactor(loading): remove unneeded import

* fix(loading): remove progress bar on inactive state in @carbon/styles

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/loading/_vars.scss
+++ b/packages/styles/scss/components/loading/_vars.scss
@@ -18,4 +18,4 @@ $circumference: $radius * 2 * 3.1416;
 /// @type Number
 /// @access private
 /// @group loading
-$loading__size: 5.5rem;
+$loading-size: 5.5rem;
