feat(Plex): add plex package to @carbon/styles (#9350)
* feat(Plex): add plex package to @carbon/styles

* feat(Plex): only emit if css--font-face is true

* test(snapshot): update snapshots

--- a/packages/carbon-react/index.scss
+++ b/packages/carbon-react/index.scss
@@ -6,6 +6,6 @@
 //
 
 @forward '@carbon/styles' with (
-  $css--font-face: false,
-  $css--default-type: false,
+  $css--font-face: true,
+  $css--plex-arabic: true,
 );
