feat(carbon-react): add scss entrypoints (#9353)
* chore(carbon-react): add build-styles task

* feat(carbon-react): add scss entrypoints

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/carbon-react/.storybook/styles.scss
+++ b/packages/carbon-react/.storybook/styles.scss
@@ -9,7 +9,10 @@ $feature-flags: (
   enable-v11-release: true,
 );
 
-@use '../index.scss' as styles;
+@use '../index.scss' as styles with (
+  $css--font-face: true,
+  $css--plex-arabic: true,
+);
 @use '../scss/components/button';
 @use '../scss/components/tag';
 
