--- a/packages/carbon-react/index.scss
+++ b/packages/carbon-react/index.scss
@@ -5,7 +5,4 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward '@carbon/styles' with (
-  $css--font-face: true,
-  $css--plex-arabic: true,
-);
+@forward '@carbon/styles';
