feat(Popover): add to @carbon/styles (#9257)
* feat(Popover): add to @carbon/styles

* fix(Popover): remove index.js

* fix(Popover): add compat theme for type token

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -35,6 +35,7 @@
 @use 'structured-list';
 @use 'overflow-menu';
 @use 'number-input';
+@use 'popover';
 @use 'tile';
 @use 'time-picker';
 @use 'treeview';
