fix(data-table-core): disabled link bug (#9395)
* fix(data-table-core): disabled link bug

* fix(data-table): add disabled link example

* removing TESTING storybook

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -97,6 +97,11 @@
     color: $link-secondary;
   }
 
+  .#{$prefix}--data-table tbody tr:hover td .#{$prefix}--link--disabled,
+  .#{$prefix}--data-table tbody tr:hover th .#{$prefix}--link--disabled {
+    color: $disabled-02;
+  }
+
   .#{$prefix}--data-table th,
   .#{$prefix}--data-table td {
     text-align: left;
