chore(styles): remove `/` symbol (#9398)
* chore(components): replace division symbol

* chore(styles): remove division symbol

Co-authored-by: Scott Strubberg <sstrubberg@protonmail.com>

--- a/packages/components/src/components/loading/_functions.scss
+++ b/packages/components/src/components/loading/_functions.scss
@@ -6,5 +6,5 @@
 //
 
 @function loading-progress($circumference, $percentage) {
-  @return $circumference - $percentage / 100 * $circumference;
+  @return $circumference - $percentage * 0.01 * $circumference;
 }
