feat(styles): add skeleton sass modules and stories (#9423)
* feat: add skeleton styles

* test: add skeleton tests

* feat: add skeleton stories

* fix: skeleton modules test

* fix: rename skeleton files

* test(codesnippet): fix vrt error

* chore: add comment

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -41,6 +41,7 @@
 @use 'radio-button';
 @use 'search';
 @use 'select';
+@use 'skeleton-styles';
 @use 'slider';
 @use 'structured-list';
 @use 'tabs';
