Use math.div instead of slash for sass (#9508)
* chore(styles): use math.div instead of slash

* chore(contributors): add contributor

* fix(styles): provide .import.scss files for dart-sass users

* fix(styles): add stylelint ignore for @imports below @use

* refactor(grid): convert story styles to use

Co-authored-by: Taylor Jones <taylor.jones826@gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/carbon-react/src/components/Grid/Grid.stories.scss
+++ b/packages/carbon-react/src/components/Grid/Grid.stories.scss
@@ -1,6 +1,5 @@
-@import '~carbon-components/scss/globals/scss/vars';
-@import '~carbon-components/scss/globals/scss/colors';
-@import '~carbon-components/scss/globals/scss/typography';
+@use '@carbon/styles/scss/colors' as *;
+@use '@carbon/styles/scss/type' as *;
 
 // Grid modes
 .bx--css-grid {
