--- a/packages/layout/scss/_key-height.import.scss
+++ b/packages/layout/scss/_key-height.import.scss
@@ -5,22 +5,23 @@
 // LICENSE file in the root directory of this source tree.
 //
 //-------------------------------------------
-// Compatibility notes
+// Compatibility notes (*.import.scss)
 // ------------------------------------------
 //
-// This file is intended to be consumed and processed with node-sass/libsass.
-// Sass language features only available in dart-sass, such as `math.div`,
-// should not be used.
+// This file is intended to be consumed and processed with dart-sass.
+// It is incompatible with node-sass/libsass as it contains sass language features
+// or functions that are unavailable in node-sass/libsass, such as `math.div`.
 //
-// The `.import` suffixed version of this file eg. `_filename.import.scss`
-// is intended to be compatible with dart-sass.
+// The non-`.import` suffixed version of this file eg. `_filename.scss`
+// is intended to be compatible with node-sass/libsass.
 //
 // Styles authored within this file must be duplicated to the corresponding
 // compatibility file to ensure we continue to support node-sass and dart-sass
 // in v10.
 
-@import 'breakpoint';
-@import 'utilities';
+@use "sass:math";
+@import 'breakpoint'; /* stylelint-disable-line no-invalid-position-at-import-rule */
+@import 'utilities'; /* stylelint-disable-line no-invalid-position-at-import-rule */
 
 /// Get the column width for a given breakpoint
 /// @param {String} $breakpoint
@@ -38,7 +39,7 @@
     $margin: map-get($values, margin);
     $columns: map-get($values, columns);
 
-    @return ($width - (2 * $margin)) / $columns;
+    @return math.div($width - (2 * $margin), $columns);
   } @else {
     @warn 'Breakpoint: `#{$breakpoint}` is not a valid breakpoint.';
   }
