--- a/packages/type/scss/_styles.import.scss
+++ b/packages/type/scss/_styles.import.scss
@@ -5,45 +5,42 @@
 // LICENSE file in the root directory of this source tree.
 //
 //-------------------------------------------
-// Compatibility notes
+// Compatibility notes (*.import.scss)
 // ------------------------------------------
 //
-// This file is intended to be consumed and processed with node-sass/libsass.
-// Sass language features only available in dart-sass, such as `math.div`,
-// should not be used.
+// This file is intended to be consumed and processed with dart-sass.
+// It is incompatible with node-sass/libsass as it contains sass language features
+// or functions that are unavailable in node-sass/libsass, such as `math.div`.
 //
-// The `.import` suffixed version of this file eg. `_filename.import.scss`
-// is intended to be compatible with dart-sass.
+// The non-`.import` suffixed version of this file eg. `_filename.scss`
+// is intended to be compatible with node-sass/libsass.
 //
 // Styles authored within this file must be duplicated to the corresponding
 // compatibility file to ensure we continue to support node-sass and dart-sass
 // in v10.
 
-/* stylelint-disable number-max-precision */
-
-@import '@carbon/layout/scss/breakpoint';
-@import 'font-family';
-@import 'scale';
+@use "sass:math";
+@import '@carbon/layout/scss/breakpoint'; /* stylelint-disable-line no-invalid-position-at-import-rule */
+@import 'font-family'; /* stylelint-disable-line no-invalid-position-at-import-rule */
+@import 'scale'; /* stylelint-disable-line no-invalid-position-at-import-rule */
 
 /// @type Map
 /// @access public
-/// @deprecated
 /// @group @carbon/type
 $caption-01: (
   font-size: carbon--type-scale(1),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.33333,
+  line-height: 1.34,
   letter-spacing: 0.32px,
 ) !default;
 
 /// @type Map
 /// @access public
-/// @deprecated
 /// @group @carbon/type
 $caption-02: (
   font-size: carbon--type-scale(2),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.28572,
+  line-height: 1.29,
   letter-spacing: 0.32px,
 ) !default;
 
@@ -53,7 +50,7 @@ $caption-02: (
 $label-01: (
   font-size: carbon--type-scale(1),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.33333,
+  line-height: 1.34,
   letter-spacing: 0.32px,
 ) !default;
 
@@ -63,49 +60,27 @@ $label-01: (
 $label-02: (
   font-size: carbon--type-scale(2),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.28572,
-  letter-spacing: 0.16px,
-) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$legal-01: (
-  font-size: carbon--type-scale(1),
-  font-weight: carbon--font-weight('regular'),
-  line-height: 1.33333,
+  line-height: 1.29,
   letter-spacing: 0.32px,
 ) !default;
 
 /// @type Map
 /// @access public
-/// @group @carbon/type
-$legal-02: (
-  font-size: carbon--type-scale(2),
-  font-weight: carbon--font-weight('regular'),
-  line-height: 1.28572,
-  letter-spacing: 0.16px,
-) !default;
-
-/// @type Map
-/// @access public
-/// @deprecated
 /// @group @carbon/type
 $helper-text-01: (
   font-size: carbon--type-scale(1),
-  line-height: 1.33333,
+  line-height: 1.34,
   letter-spacing: 0.32px,
 ) !default;
 
 /// @type Map
 /// @access public
-/// @deprecated
 /// @group @carbon/type
 $helper-text-02: (
   font-size: carbon--type-scale(2),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.28572,
-  letter-spacing: 0.16px,
+  line-height: 1.29,
+  letter-spacing: 0.32px,
 ) !default;
 
 /// @type Map
@@ -114,14 +89,9 @@ $helper-text-02: (
 $body-short-01: (
   font-size: carbon--type-scale(2),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.28572,
+  line-height: 1.29,
   letter-spacing: 0.16px,
 ) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$body-compact-01: $body-short-01 !default;
 
 /// @type Map
 /// @access public
@@ -129,14 +99,9 @@ $body-compact-01: $body-short-01 !default;
 $body-long-01: (
   font-size: carbon--type-scale(2),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.42857,
+  line-height: 1.43,
   letter-spacing: 0.16px,
 ) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$body-01: $body-long-01 !default;
 
 /// @type Map
 /// @access public
@@ -151,11 +116,6 @@ $body-short-02: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$body-compact-02: $body-short-02 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $body-long-02: (
   font-size: carbon--type-scale(3),
   font-weight: carbon--font-weight('regular'),
@@ -166,16 +126,11 @@ $body-long-02: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$body-02: $body-long-02 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $code-01: (
   font-family: carbon--font-family('mono'),
   font-size: carbon--type-scale(1),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.33333,
+  line-height: 1.34,
   letter-spacing: 0.32px,
 ) !default;
 
@@ -186,7 +141,7 @@ $code-02: (
   font-family: carbon--font-family('mono'),
   font-size: carbon--type-scale(2),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.42857,
+  line-height: 1.43,
   letter-spacing: 0.32px,
 ) !default;
 
@@ -196,24 +151,14 @@ $code-02: (
 $heading-01: (
   font-size: carbon--type-scale(2),
   font-weight: carbon--font-weight('semibold'),
-  line-height: 1.42857,
+  line-height: 1.29,
   letter-spacing: 0.16px,
 ) !default;
 
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$productive-heading-01: (
-  font-size: carbon--type-scale(2),
-  font-weight: carbon--font-weight('semibold'),
-  line-height: 1.28572,
-  letter-spacing: 0.16px,
-) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$heading-compact-01: $productive-heading-01 !default;
+$productive-heading-01: $heading-01 !default;
 
 /// @type Map
 /// @access public
@@ -221,25 +166,14 @@ $heading-compact-01: $productive-heading-01 !default;
 $heading-02: (
   font-size: carbon--type-scale(3),
   font-weight: carbon--font-weight('semibold'),
-  line-height: 1.5,
+  line-height: 1.375,
   letter-spacing: 0,
 ) !default;
 
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$productive-heading-02: (
-  font-size: carbon--type-scale(3),
-  font-weight: carbon--font-weight('semibold'),
-  line-height: 1.375,
-  letter-spacing: 0,
-) !default;
-
-$heading-compact-02: $productive-heading-02 !default;
-
-// Question for designers:
-// heading-02 currently maps to productive heading-02
-// what are the styles for heading-compact-02?
+$productive-heading-02: $heading-02 !default;
 
 /// @type Map
 /// @access public
@@ -254,22 +188,12 @@ $productive-heading-03: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$heading-03: $productive-heading-03 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $productive-heading-04: (
   font-size: carbon--type-scale(7),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.28572,
+  line-height: 1.29,
   letter-spacing: 0,
 ) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$heading-04: $productive-heading-04 !default;
 
 /// @type Map
 /// @access public
@@ -284,13 +208,8 @@ $productive-heading-05: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$heading-05: $productive-heading-05 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $productive-heading-06: (
-  font-size: carbon--type-scale(10),
+  font-size: carbon--type-scale(8),
   font-weight: carbon--font-weight('light'),
   // Extra digit needed for precision in Chrome
   line-height: 1.199,
@@ -300,13 +219,8 @@ $productive-heading-06: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$heading-06: $productive-heading-06 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $productive-heading-07: (
-  font-size: carbon--type-scale(12),
+  font-size: carbon--type-scale(10),
   font-weight: carbon--font-weight('light'),
   line-height: 1.19,
   letter-spacing: 0,
@@ -315,17 +229,22 @@ $productive-heading-07: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$heading-07: $productive-heading-07 !default;
+$expressive-heading-01: map-merge(
+  $heading-01,
+  (
+    line-height: 1.25,
+  )
+) !default;
 
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$expressive-heading-01: $heading-01 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$expressive-heading-02: $heading-02 !default;
+$expressive-heading-02: map-merge(
+  $heading-02,
+  (
+    line-height: 1.5,
+  )
+) !default;
 
 /// @type Map
 /// @access public
@@ -342,7 +261,7 @@ $expressive-heading-03: (
     ),
     max: (
       font-size: carbon--type-scale(6),
-      line-height: 1.33333,
+      line-height: 1.334,
     ),
   ),
 ) !default;
@@ -350,15 +269,10 @@ $expressive-heading-03: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$fluid-heading-03: $expressive-heading-03 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $expressive-heading-04: (
   font-size: carbon--type-scale(7),
   font-weight: carbon--font-weight('regular'),
-  line-height: 1.28572,
+  line-height: 1.29,
   letter-spacing: 0,
   breakpoints: (
     xlg: (
@@ -370,11 +284,6 @@ $expressive-heading-04: (
     ),
   ),
 ) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$fluid-heading-04: $expressive-heading-04 !default;
 
 /// @type Map
 /// @access public
@@ -407,11 +316,6 @@ $expressive-heading-05: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$fluid-heading-05: $expressive-heading-05 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $expressive-heading-06: (
   font-size: carbon--type-scale(8),
   font-weight: carbon--font-weight('semibold'),
@@ -439,20 +343,15 @@ $expressive-heading-06: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$fluid-heading-06: $expressive-heading-06 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $expressive-paragraph-01: (
   font-size: carbon--type-scale(6),
   font-weight: carbon--font-weight('light'),
-  line-height: 1.33333,
+  line-height: 1.334,
   letter-spacing: 0,
   breakpoints: (
     lg: (
       font-size: carbon--type-scale(7),
-      line-height: 1.28572,
+      line-height: 1.29,
     ),
     max: (
       font-size: carbon--type-scale(8),
@@ -464,13 +363,7 @@ $expressive-paragraph-01: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$fluid-paragraph-01: $expressive-paragraph-01 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $quotation-01: (
-  font-family: carbon--font-family('serif'),
   font-size: carbon--type-scale(5),
   font-weight: carbon--font-weight('regular'),
   line-height: 1.3,
@@ -481,11 +374,11 @@ $quotation-01: (
     ),
     lg: (
       font-size: carbon--type-scale(6),
-      line-height: 1.33333,
+      line-height: 1.334,
     ),
     xlg: (
       font-size: carbon--type-scale(7),
-      line-height: 1.28572,
+      line-height: 1.29,
     ),
     max: (
       font-size: carbon--type-scale(8),
@@ -497,13 +390,7 @@ $quotation-01: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$fluid-quotation-01: $quotation-01 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $quotation-02: (
-  font-family: carbon--font-family('serif'),
   font-size: carbon--type-scale(8),
   font-weight: carbon--font-weight('light'),
   line-height: 1.25,
@@ -526,11 +413,6 @@ $quotation-02: (
     ),
   ),
 ) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$fluid-quotation-02: $quotation-02 !default;
 
 /// @type Map
 /// @access public
@@ -561,11 +443,6 @@ $display-01: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$fluid-display-01: $display-01 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $display-02: (
   font-size: carbon--type-scale(10),
   font-weight: carbon--font-weight('semibold'),
@@ -588,11 +465,6 @@ $display-02: (
     ),
   ),
 ) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$fluid-display-02: $display-02 !default;
 
 /// @type Map
 /// @access public
@@ -628,11 +500,6 @@ $display-03: (
 /// @type Map
 /// @access public
 /// @group @carbon/type
-$fluid-display-03: $display-03 !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
 $display-04: (
   font-size: carbon--type-scale(10),
   font-weight: carbon--font-weight('semibold'),
@@ -660,11 +527,6 @@ $display-04: (
     ),
   ),
 ) !default;
-
-/// @type Map
-/// @access public
-/// @group @carbon/type
-$fluid-display-04: $display-04 !default;
 
 /// @type Map
 /// @access public
@@ -704,31 +566,6 @@ $tokens: (
   display-02: $display-02,
   display-03: $display-03,
   display-04: $display-04,
-  // V11 Tokens
-  legal-01: $legal-01,
-  legal-02: $legal-02,
-  body-compact-01: $body-compact-01,
-  body-compact-02: $body-compact-02,
-  heading-compact-01: $heading-compact-01,
-  heading-compact-02: $heading-compact-02,
-  body-01: $body-01,
-  body-02: $body-02,
-  heading-03: $heading-03,
-  heading-04: $heading-04,
-  heading-05: $heading-05,
-  heading-06: $heading-06,
-  heading-07: $heading-07,
-  fluid-heading-03: $fluid-heading-03,
-  fluid-heading-04: $fluid-heading-04,
-  fluid-heading-05: $fluid-heading-05,
-  fluid-heading-06: $fluid-heading-06,
-  fluid-paragraph-01: $fluid-paragraph-01,
-  fluid-quotation-01: $fluid-quotation-01,
-  fluid-quotation-02: $fluid-quotation-02,
-  fluid-display-01: $fluid-display-01,
-  fluid-display-02: $fluid-display-02,
-  fluid-display-03: $fluid-display-03,
-  fluid-display-04: $fluid-display-04,
 );
 
 /// @param {Map} $map
@@ -745,7 +582,7 @@ $tokens: (
 /// @access public
 /// @group @carbon/type
 @function strip-unit($value) {
-  @return $value / ($value * 0 + 1);
+  @return math.div($value, $value * 0 + 1);
 }
 
 /// This helper includes fluid type styles for the given token value. Fluid type
