fix(styles): update notification to new token format (#9582)
* docs(carbon-react): update storybook to use background theme color

* fix(eslint): update to exclude *.stories.js files

* docs(notification): add playground for toast

* refactor(styles): update notification tests to one file

* feat(themes): add support for component tokens

* feat(styles): add support for CSS Custom Property in component tokens

* fix(styles): update notification to new token format

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/carbon-react/.storybook/styles.scss
+++ b/packages/carbon-react/.storybook/styles.scss
@@ -5,10 +5,6 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-$feature-flags: (
-  enable-v11-release: true,
-);
-
 @use '../index.scss' as styles with (
   $css--font-face: true,
   $css--plex-arabic: true,
@@ -30,6 +26,10 @@ $feature-flags: (
 
 [data-carbon-theme='g100'] {
   @include styles.theme(styles.$g100, button.$g100, tag.$g100);
+}
+
+body {
+  background: styles.$background;
 }
 
 html[lang='en'] body {
